src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Custom component styles */
/* Copy to clipboard */
pre[class*='astro-code'] {
  position: relative;
  margin: 5px 0;
  padding: 2.25rem 0 1.75rem 1rem;

  /* more stuff */
}

pre[class*='astro-code'] button {
  position: absolute;
  top: 5px;
  right: 5px;

  font-size: 0.9rem;
  padding: 0.15rem;
  background-color: #525252;

  border-radius: 5px;
  text-shadow: #c4c4c4 0 0 2px;
  color: #fff;
}

pre[class*='astro-code'] button:hover {
  cursor: pointer;
  background-color: #6b6b6b;
}
/* End copy to clipboard */
/* #add9f4 - old blue color */
@layer base {
  body {
    @apply scrollbar-accent;
  }
}

@layer components {
  .scrollbar-accent {
    @apply scrollbar scrollbar-thumb-secondary scrollbar-track-slate-800 dark:scrollbar-thumb-indigo-300 dark:scrollbar-track-slate-200 scrollbar-thumb-rounded-md;
  }
}

[data-theme='winter'] .highlight:hover {
  box-shadow: #c7d2fe 0px -1.25rem 0px inset;
}
[data-theme='winter'] .highlight {
  box-shadow: #c7d2fe 0px -0.5rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

.highlight:hover {
  box-shadow: #463aa1 0px -1.25rem 0px inset;
}

.highlight {
  box-shadow: #463aa1 0px -0.5rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

[data-theme='winter'] .highlight-heading:hover {
  box-shadow: #c7d2fe 0px -2.25rem 0px inset;
}
[data-theme='winter'] .highlight-heading {
  box-shadow: #c7d2fe 0px -1rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

.highlight-heading:hover {
  box-shadow: #463aa1 0px -2.25rem 0px inset;
}

.highlight-heading {
  box-shadow: #463aa1 0px -1rem 0px inset;
  transition: box-shadow 0.3s ease-out 0s;
}

[data-theme='winter'] .wave-t {
  @apply text-slate-200;
}
.wave-t {
  @apply text-slate-800;
}
[data-theme='winter'] .wave-b {
  @apply bg-slate-200;
}
.wave-b {
  @apply bg-slate-800;
}

[data-theme='winter'] .footer-text-t {
  @apply text-slate-600;
}
.footer-text-t {
  @apply text-slate-400;
}

[data-theme='winter'] .footer-text-b {
  @apply text-slate-600;
}
.footer-text-b {
  @apply text-slate-400;
}
/* End for custom component styles */

/* Custom utilities */
html,
body {
  height: 100%;
  min-height: 100vh;
}

/* hide #bmc-wbtn on small screens */
@media only screen and (max-width: 480px) {
  #bmc-wbtn,
  #bmc-wbtn + div {
    display: none !important;
  }
}
/* End for custom utilities */

